items without an image now work:

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,9 @@
   <script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-database.js"></script>
 
+  <!-- Animation CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+  
   <!-- Material UI -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 
